# support-deflect-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-check.yml  ci-e2e.yml  ci-integration.yml  ci-unit.yml  ci.yml  deploy.yml
docs/: agent-rag-interaction-flows.md
infra/: template.yaml
src/admin/: health_check.py  kill_switch.py  kill_switch_check.py  setup.py
src/agent/: orchestrator.py  worker.py
src/agent/prompts/: planner.py  responder.py  system.py
src/agent/tools/: assign_channel.py  base.py  calendar_event.py  manage_progress.py  search_kb.py  send_message.py
src/config/: settings.py
src/gcal/: callback.py  client.py  oauth.py
src/llm/: bedrock.py  fallback.py  gemini.py  router.py
src/middleware/agent/: output_validator.py  tool_validator.py  turn_budget.py
src/middleware/inbound/: chain.py  concurrency_guard.py  filters.py  sanitizer.py
src/rag/: scraper.py
src/slack/: blocks.py  client.py  commands.py  handler.py  models.py  oauth.py
src/state/: dynamo.py  models.py  ttl.py
tests/: conftest.py
tests/e2e/: conftest.py  test_dynamo_state_e2e.py  test_gcal_e2e.py  test_middleware_e2e.py  test_rag_pipeline_e2e.py  test_slack_handler_e2e.py
tests/integration/: test_admin_setup.py  test_agent_pipeline.py  test_calendar.py  test_rag_pipeline.py  test_slack_pipeline.py
tests/unit/: test_admin_setup.py  test_agent_worker.py  test_assign_channel.py  test_calendar_event.py  test_chunker.py  test_concurrency_guard.py  test_confidence.py  test_crypto.py  test_dynamo.py  test_fallback.py  test_filters.py  test_gcal_callback.py  test_gcal_client.py  test_gcal_oauth.py  test_gemini.py  test_health_check.py  test_increment_usage.py  test_interactions.py  test_kill_switch.py  test_kill_switch_check.py  test_manage_progress.py  test_middleware_chain.py  test_models.py  test_orchestrator.py  test_output_validator.py  test_pipeline.py  test_prompt_planner.py  test_prompt_responder.py  test_prompt_system.py  test_provider.py  test_router.py  test_sanitizer.py  test_scraper.py  test_search_kb.py  test_send_message_tool.py  test_settings.py  test_signature.py  test_slack_client.py  test_slack_commands.py  test_slack_handler.py  (+8 more)
