[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherpa"
version = "0.1.0"
authors = [{name = "Aditya Mittal", email = "theadityamittal@gmail.com"}]
description = "Adaptive AI-driven onboarding Slack bot for nonprofits"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "pinecone>=5.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "httpx>=0.27.0",
    "aws-lambda-powertools>=2.30.0",
    "slack-sdk>=3.27.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "moto[dynamodb,s3,sqs,secretsmanager]>=5.0.0",
    "responses>=0.25.0",
    "ruff==0.3.4",
    "mypy==1.9.0",
    "boto3-stubs[dynamodb,s3,sqs,secretsmanager]>=1.34.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/theadityamittal/sherpa"
Repository = "https://github.com/theadityamittal/sherpa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["config", "rag", "llm", "state", "slack", "middleware", "agent", "gcal", "admin", "security"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "rag", "llm", "state", "slack", "middleware", "agent", "gcal", "admin", "security"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["build", "dist", ".aws-sam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring mocked AWS",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
